added csrf protection

--- a/src/main/resources/templates/layout/auth.html
+++ b/src/main/resources/templates/layout/auth.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
     <title th:text="${pageTitle} ?: 'OpenMailer - Sign In'">OpenMailer - Sign In</title>
     <meta name="description" th:content="${pageDescription} ?: 'Sign in to your OpenMailer account to manage email campaigns, templates, and subscribers.'">
