--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
     <title th:text="${pageTitle} ?: 'OpenMailer - Open Source Bulk Email System'">OpenMailer</title>
     <meta name="description" th:content="${pageDescription} ?: 'OpenMailer is an open source bulk email system with templates, designed to help you manage and send email campaigns efficiently.'">
